--- a/SpacePartitioning.html
+++ b/SpacePartitioning.html
@@ -28,7 +28,7 @@
 								<a href="index.html" class="blue-on-hover">Home Page</a>
 							</div>
 							<div class="header-nav-element">
-								<a href="#" class="blue-on-hover">About</a>
+								<a href="#shortcuts" class="blue-on-hover">About</a>
 							</div>
 							<div class="header-nav-element">
 								<a href="#" class="blue-on-hover">Features</a>
@@ -46,7 +46,7 @@
 						<div class="inner">
 							<div class="logo"></div>
 							<h2>Space Partitioning</h2>
-							<p></p>
+							<p>Bounding volume hierarchies, octrees, kd-trees&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;GJK Collision Detection</p>
 						</div>
 					</section>
 
@@ -54,13 +54,13 @@
 					<section id="wrapper">
 
 						<!-- "Blue" wrapper -->
-						<section id="space-part-details" class="wrapper alt style1">
+						<section id="space-partitioning-details" class="wrapper alt style1">
 
 							<div class="inner">
 
 								<div id="disclaimer">
 									<h2 class="major">Disclaimer</h2>
-									<p>This page is currently WIP.</p>
+									<p>This page is currently a WIP (Work In Progress).</p>
 								</div>
 
 								<div id="shortcuts">
@@ -68,40 +68,40 @@
 									<h2 class="major">Shortcuts</h2>
 									<ul class="actions small">
 										<li><a href="#shortcuts" class="button small blue-on-hover icon solid fa-link">About</a></li>
-										<li><a href="#feature-a" class="button small blue-on-hover icon solid fa-link">Feature A</a></li>
-										<li><a href="#feature-b" class="button small blue-on-hover icon solid fa-link">Feature B</a></li>
+										<li><a href="#" class="button small blue-on-hover icon solid fa-link">Feature A</a></li>
+										<li><a href="#" class="button small blue-on-hover icon solid fa-link">Feature B</a></li>
 									</ul>
 								</div>
 
-								<div id="about-space-part">
+								<div id="about-anim-engine">
 									<br><br>
 									<h2 class="major">About</h2>
 									<p>
-										Cool space partitioning project. Check out source code for octrees section <a href="https://github.com/Melell/Space-Partitioning" class="blue-on-hover" target="_blank">here.</a>
+										Super cool collision detection optimization techniques. Check out source code for octrees part of the project <a href="https://github.com/Melell/Space-Partitioning" class="blue-on-hover" target="_blank">here.</a>
 									</p>
                                 	<p>
-										<a href="https://github.com/Melell/Animation-Engine" class="blue-on-hover icon brands fa-github" target="_blank">&nbsp;&nbsp;Link to Repo</a>
+										<a href="https://github.com/Melell/Space-Partitioning" class="blue-on-hover icon brands fa-github" target="_blank">&nbsp;&nbsp;Link to GitHub repo</a>
 									</p>
 
 									<ul class="game-info-list">
 										<li class="game-info-item icon solid fa-tools">&nbsp;&nbsp;C++ from scratch</li>
-										<li class="game-info-item icon solid fa-calendar-check">&nbsp;&nbsp;2-3 months</li>
-										<li class="game-info-item icon solid fa-user-plus">&nbsp;&nbsp;Individual Project</li>
+										<li class="game-info-item icon solid fa-calendar-check">&nbsp;&nbsp;3 months</li>
+										<li class="game-info-item icon solid fa-user-plus">&nbsp;&nbsp;Individual project</li>
 									</ul>
 								</div>
 
 								<div id="feature-a">
 									<br><br>
 									<h2 class="major">Feature A</h2>
-									<h6 style="font-weight: lighter;">Demo video</h6>
-									<iframe src="https://www.youtube.com/embed/7cDI4O5SWLQ?autoplay=1&mute=1&rel=0&loop=1&playlist=7cDI4O5SWLQ" title="Feature A Video" class="trailer dynamic-vid">
+									<h6 style="font-weight: lighter;">Demo Video</h6>
+                                    <iframe src="https://www.youtube.com/embed/7cDI4O5SWLQ?autoplay=1&mute=1&rel=0&loop=1&playlist=7cDI4O5SWLQ" title="Feature A" class="trailer dynamic-vid"></iframe>
 								</div>
 
                                 <div id="feature-b">
 									<br><br>
 									<h2 class="major">Feature B</h2>
-									<h6 style="font-weight: lighter;">Demo video</h6>
-									<iframe src="https://www.youtube.com/embed/giVHaJ1Xtm0?autoplay=1&mute=1&rel=0&loop=1&playlist=giVHaJ1Xtm0" title="Feature B Video" class="trailer dynamic-vid">
+									<h6 style="font-weight: lighter;">Demo Video</h6>
+                                    <iframe src="https://www.youtube.com/embed/giVHaJ1Xtm0?autoplay=1&mute=1&rel=0&loop=1&playlist=giVHaJ1Xtm0" title="Feature B" class="trailer dynamic-vid"></iframe>
 								</div>
 
 							</div>
