--- a/AntColonySimulation.html
+++ b/AntColonySimulation.html
@@ -28,7 +28,7 @@
 								<a href="index.html" class="blue-on-hover">Home Page</a>
 							</div>
 							<div class="header-nav-element">
-								<a href="#" class="blue-on-hover">About</a>
+								<a href="#shortcuts" class="blue-on-hover">About</a>
 							</div>
 							<div class="header-nav-element">
 								<a href="#" class="blue-on-hover">Features</a>
@@ -46,7 +46,7 @@
 						<div class="inner">
 							<div class="logo"></div>
 							<h2>Ant Colony Simulation</h2>
-							<p></p>
+							<p>Blah blah&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Car</p>
 						</div>
 					</section>
 
@@ -60,7 +60,7 @@
 
 								<div id="disclaimer">
 									<h2 class="major">Disclaimer</h2>
-									<p>This page is currently WIP.</p>
+									<p>This page is currently a WIP (Work In Progress).</p>
 								</div>
 
 								<div id="shortcuts">
@@ -68,30 +68,32 @@
 									<h2 class="major">Shortcuts</h2>
 									<ul class="actions small">
 										<li><a href="#shortcuts" class="button small blue-on-hover icon solid fa-link">About</a></li>
-										<li><a href="#feature-a" class="button small blue-on-hover icon solid fa-link">Feature A</a></li>
-										<li><a href="#" class="button small blue-on-hover icon solid fa-link">Feature B</a></li>
+										<li><a href="#" class="button small blue-on-hover icon solid fa-link">Feature A</a></li>
 									</ul>
 								</div>
 
-								<div id="about-anim-engine">
+								<div id="about-ant-colony-sim">
 									<br><br>
 									<h2 class="major">About</h2>
 									<p>
-										Cool research project.
+										Super cool research project. Check out research paper <a href="#" class="blue-on-hover" target="_blank">here.</a>
+									</p>
+                                	<p>
+										<a href="#" class="blue-on-hover icon brands fa-github" target="_blank">&nbsp;&nbsp;Link to GitHub repo</a>
 									</p>
 
 									<ul class="game-info-list">
 										<li class="game-info-item icon solid fa-tools">&nbsp;&nbsp;C++ from scratch</li>
-										<li class="game-info-item icon solid fa-calendar-check">&nbsp;&nbsp;2 months</li>
-										<li class="game-info-item icon solid fa-user-plus">&nbsp;&nbsp;Pair Project</li>
+										<li class="game-info-item icon solid fa-calendar-check">&nbsp;&nbsp;3 months</li>
+										<li class="game-info-item icon solid fa-user-plus">&nbsp;&nbsp;Pair project</li>
 									</ul>
 								</div>
 
 								<div id="feature-a">
 									<br><br>
 									<h2 class="major">Feature A</h2>
-									<h6 style="font-weight: lighter;">Demo video</h6>
-									<iframe src="https://www.youtube.com/embed/2ASpOako-P0?autoplay=1&mute=1&rel=0&loop=1&playlist=2ASpOako-P0" title="Ant Colony Simulation" class="trailer dynamic-vid">
+									<h6 style="font-weight: lighter;">Demo Video</h6>
+                                    <iframe src="https://www.youtube.com/embed/2ASpOako-P0?autoplay=1&mute=1&rel=0&loop=1&playlist=2ASpOako-P0" title="Ant Colony Simulation" class="trailer dynamic-vid"></iframe>
 								</div>
 
 							</div>
