Updated titles of pages.

--- a/Entails.html
+++ b/Entails.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Miguel Echeverria - C++ Generalist Programmer</title>
+		<title>Entails - Miguel Echeverria</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="author" content="Miguel Echeverria" />
