Seavilizations page content updated.

--- a/Seavilizations.html
+++ b/Seavilizations.html
@@ -62,8 +62,8 @@
 							<div class="inner">
 
 								<div id="disclaimer">
-									<h2 class="major">Disclaimer</h2>
-									<p>The screenshots in this page don't represent the visual quality in the game due to image compression.</p>
+									<h2 class="major">Work In Progress</h2>
+									<p>This page is currently a work in progress. It is missing some screenshots that will be added soon.</p>
 								</div>
 
 								<div id="shortcuts">
@@ -100,15 +100,6 @@
 									<div class="box alt">
 										<div class="row gtr-uniform">
 											<div class="col-12"><span class="image fit"><iframe src="https://www.youtube.com/embed/F10GEwkIaQs?autoplay=1&mute=1&start=5&rel=0&loop=1&playlist=F10GEwkIaQs" title="Seavilizations Release Trailer" class="trailer dynamic-vid"></iframe></span></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_1_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_1_720x405.webp" alt="Screenshot-1" /></span></a></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_2_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_2_720x405.webp" alt="Screenshot-2" /></span></a></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_3_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_3_720x405.webp" alt="Screenshot-3" /></span></a></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_4_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_4_720x405.webp" alt="Screenshot-4" /></span></a></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_5_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_5_720x405.webp" alt="Screenshot-5" /></span></a></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_6_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_6_720x405.webp" alt="Screenshot-6" /></span></a></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_7_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_7_720x405.webp" alt="Screenshot-7" /></span></a></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_8_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_8_720x405.webp" alt="Screenshot-8" /></span></a></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_9_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_9_720x405.webp" alt="Screenshot-9" /></span></a></div>
 										</div>
 									</div>
 								</div>
@@ -118,10 +109,10 @@
 									<br>
 									<div id="entity-comp-system" class="box my-box">
 										<h3 class="my-work-separator">Entity Component System</h3>
+										<span class="image right"><img src="images/placeholder/pic01.jpg" alt="" /></span>
 										<p>
 											Architected the entity-component system for the engine, with an integrated custom memory manager to store gameobjects and components of the same type in memory pools for faster access.
 										</p>
-										<iframe src="https://www.youtube.com/embed/7cDI4O5SWLQ?&autoplay=1&mute=1&rel=0&version=3&loop=1&playlist=7cDI4O5SWLQ" title="Shadow Racer Release Trailer" class="trailer"></iframe>
 										<br>
 									</div>
 									<div id="core-engine" class="box my-box">
@@ -163,6 +154,7 @@
 									</div>
 									<div id="cinematics" class="box my-box">
 									<h3 class="my-work-separator">Cinematics</h3>
+										<span class="image right"><img src="images/placeholder/pic01.jpg" alt="" /></span>
 										<p>
 											Programmed several cinematics/camera effects to indicate the start/end of a match, and make it clear which of the players has won.
 											<ul>
@@ -171,16 +163,6 @@
 												<li>Small cinematic to showcase winner (online)</li>
 											</ul>
 										</p>
-										<div class="box alt">
-											<div class="row gtr-uniform">
-												<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-lighting/Lighting_1_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-lighting/Lighting_1_720x405.webp" alt="Lighting-Screenshot-1" /></span></a></div>
-												<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-lighting/Lighting_2_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-lighting/Lighting_2_720x405.webp" alt="Lighting-Screenshot-2" /></span></a></div>
-												<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-lighting/Lighting_3_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-lighting/Lighting_3_720x405.webp" alt="Lighting-Screenshot-3" /></span></a></div>
-												<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-lighting/Lighting_7_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-lighting/Lighting_7_720x405.webp" alt="Lighting-Screenshot-4" /></span></a></div>
-												<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-lighting/Lighting_5_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-lighting/Lighting_5_720x405.webp" alt="Lighting-Screenshot-5" /></span></a></div>
-												<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-lighting/Lighting_6_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-lighting/Lighting_6_720x405.webp" alt="Lighting-Screenshot-6" /></span></a></div>
-											</div>
-										</div>
 									</div>
 									<div id="other-gameplay-tasks" class="box my-box">
 										<h3 class="my-work-separator">Other Gameplay Tasks</h3>
@@ -197,7 +179,7 @@
 									</div>
 									<div id="3d-modelling" class="box my-box">
 										<h3 class="my-work-separator">3D Modelling</h3>
-										<p><span class="image right"><img src="images/placeholder/pic02.jpg" alt="" /></span>
+										<p><span class="image right"><img src="images/placeholder/pic01.jpg" alt="" /></span>
 											Assisted the main modeller by creating some of the models used in the game with 3ds Max:
 											<ul>
 												<li>Trirreme boat and its collider mesh</li>
