Entails page content updated.

--- a/Entails.html
+++ b/Entails.html
@@ -62,8 +62,8 @@
 							<div class="inner">
 
 								<div id="disclaimer">
-									<h2 class="major">Disclaimer</h2>
-									<p>The screenshots in this page don't represent the visual quality in the game due to image compression.</p>
+									<h2 class="major">Work In Progress</h2>
+									<p>This page is currently being worked on. There are some screenshots missing that will be added soon.</p>
 								</div>
 
 								<div id="shortcuts">
@@ -100,15 +100,6 @@
 									<div class="box alt">
 										<div class="row gtr-uniform">
 											<div class="col-12"><span class="image fit"><iframe src="https://www.youtube.com/embed/lKqRAVqub4I?autoplay=1&mute=1&start=17&rel=0&loop=1&playlist=lKqRAVqub4I" title="Entails Release Trailer" class="trailer dynamic-vid"></iframe></span></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_1_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_1_720x405.webp" alt="Screenshot-1" /></span></a></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_2_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_2_720x405.webp" alt="Screenshot-2" /></span></a></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_3_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_3_720x405.webp" alt="Screenshot-3" /></span></a></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_4_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_4_720x405.webp" alt="Screenshot-4" /></span></a></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_5_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_5_720x405.webp" alt="Screenshot-5" /></span></a></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_6_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_6_720x405.webp" alt="Screenshot-6" /></span></a></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_7_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_7_720x405.webp" alt="Screenshot-7" /></span></a></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_8_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_8_720x405.webp" alt="Screenshot-8" /></span></a></div>
-											<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/Screenshot_9_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/Screenshot_9_720x405.webp" alt="Screenshot-9" /></span></a></div>
 										</div>
 									</div>
 								</div>
@@ -173,7 +164,7 @@
 									</div>
 									<div id="menus" class="box my-box">
 									<h3 class="my-work-separator">Animated Menus</h3>
-										<p>
+										<p><span class="image right"><img src="images/placeholder/pic01.jpg" alt="" /></span>
 											Worked side by side with one of the animators to create a unique animated menu that suits the theme of the game.
 											<ul>
 												<li>Main menu (with special animations)</li>
@@ -181,20 +172,10 @@
 												<li>Credits and initial logo screens</li>
 											</ul>
 										</p>
-										<div class="box alt">
-											<div class="row gtr-uniform">
-												<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-lighting/Lighting_1_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-lighting/Lighting_1_720x405.webp" alt="Lighting-Screenshot-1" /></span></a></div>
-												<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-lighting/Lighting_2_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-lighting/Lighting_2_720x405.webp" alt="Lighting-Screenshot-2" /></span></a></div>
-												<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-lighting/Lighting_3_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-lighting/Lighting_3_720x405.webp" alt="Lighting-Screenshot-3" /></span></a></div>
-												<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-lighting/Lighting_7_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-lighting/Lighting_7_720x405.webp" alt="Lighting-Screenshot-4" /></span></a></div>
-												<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-lighting/Lighting_5_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-lighting/Lighting_5_720x405.webp" alt="Lighting-Screenshot-5" /></span></a></div>
-												<div class="col-4"><a class="blue-on-hover" href="images/screenshots/shadow-racer/level-lighting/Lighting_6_720x405.webp"><span class="image fit clickable-img"><img src="images/screenshots/shadow-racer/level-lighting/Lighting_6_720x405.webp" alt="Lighting-Screenshot-6" /></span></a></div>
-											</div>
-										</div>
 									</div>
 									<div id="other-gameplay-tasks" class="box my-box">
 										<h3 class="my-work-separator">Other Gameplay Tasks</h3>
-										<p><span class="image right"><img src="images/placeholder/pic02.jpg" alt="" /></span>
+										<p>
 											<ul>
 												<li>Moving infinite background in "cars" level</li>
 												<li>Camera shake system</li>
@@ -205,7 +186,7 @@
 									</div>
 									<div id="bug-fixing" class="box my-box">
 										<h3 class="my-work-separator">Bug fixing</h3>
-										<p><span class="image right"><img src="images/placeholder/pic02.jpg" alt="" /></span>
+										<p>
 											In every software project, there are a wide range of bugs, as well as other smaller tasks that are not worth mentioning since they are assumed to have happened. However in this one, I was particularly involved in solving and helping others solve many of the bugs that arose during development, so I felt the need to mention it.
 										</p>
 									</div>
