Ant colony simulation page updated and research paper added.

--- a/AntColonySimulation.html
+++ b/AntColonySimulation.html
@@ -46,7 +46,7 @@
 						<div class="inner">
 							<div class="logo"></div>
 							<h2>Ant Colony Simulation</h2>
-							<p>Blah blah&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Car</p>
+							<p>Grid Based Approach</p>
 						</div>
 					</section>
 
@@ -59,8 +59,8 @@
 							<div class="inner">
 
 								<div id="disclaimer">
-									<h2 class="major">Disclaimer</h2>
-									<p>This page is currently a WIP (Work In Progress).</p>
+									<h2 class="major">Work In Progress</h2>
+									<p>This page is currently being worked on.</p>
 								</div>
 
 								<div id="shortcuts">
@@ -76,7 +76,7 @@
 									<br><br>
 									<h2 class="major">About</h2>
 									<p>
-										Super cool research project. Check out research paper <a href="#" class="blue-on-hover" target="_blank">here.</a>
+										AI pair research project implemented as part of a subject where I learned other AI techniques such as state machines, behavior trees, steering behaviors, A* pathfinding, or terrain analysis. For more information on how the project was implemented, check out the research paper we wrote <a href="docs/ant-colony-sim/RESEARCH_PAPER.pdf" class="blue-on-hover" target="_blank">here.</a>
 									</p>
                                 	<p>
 										<a href="#" class="blue-on-hover icon brands fa-github" target="_blank">&nbsp;&nbsp;Link to GitHub repo</a>
