--- a/SpacePartitioning.html
+++ b/SpacePartitioning.html
@@ -31,7 +31,7 @@
 								<a href="#shortcuts" class="blue-on-hover">About</a>
 							</div>
 							<div class="header-nav-element">
-								<a href="#" class="blue-on-hover">Features</a>
+								<a href="#feature-a" class="blue-on-hover">Features</a>
 							</div>
 							<div class="header-nav-element">
 								<a href="#footer" class="blue-on-hover">Contact</a>
@@ -46,7 +46,7 @@
 						<div class="inner">
 							<div class="logo"></div>
 							<h2>Space Partitioning</h2>
-							<p>Bounding volume hierarchies, octrees, kd-trees&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;GJK Collision Detection</p>
+							<p>BVH, octrees, kd-trees&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;GJK Collision Detection</p>
 						</div>
 					</section>
 
@@ -59,8 +59,8 @@
 							<div class="inner">
 
 								<div id="disclaimer">
-									<h2 class="major">Disclaimer</h2>
-									<p>This page is currently a WIP (Work In Progress).</p>
+									<h2 class="major">Work In Progress</h2>
+									<p>This page is currently being worked on. It is missing some videos that will soon be added.</p>
 								</div>
 
 								<div id="shortcuts">
@@ -68,8 +68,7 @@
 									<h2 class="major">Shortcuts</h2>
 									<ul class="actions small">
 										<li><a href="#shortcuts" class="button small blue-on-hover icon solid fa-link">About</a></li>
-										<li><a href="#" class="button small blue-on-hover icon solid fa-link">Feature A</a></li>
-										<li><a href="#" class="button small blue-on-hover icon solid fa-link">Feature B</a></li>
+										<li><a href="#feature-a" class="button small blue-on-hover icon solid fa-link">Feature A</a></li>
 									</ul>
 								</div>
 
@@ -77,7 +76,7 @@
 									<br><br>
 									<h2 class="major">About</h2>
 									<p>
-										Super cool collision detection optimization techniques. Check out source code for octrees part of the project <a href="https://github.com/Melell/Space-Partitioning" class="blue-on-hover" target="_blank">here.</a>
+										Collision detection optimization techniques project. I implemented primitive 3D shapes' basic collision detection, and then improved the collision system with Bounding Volume Hierarchies, Octrees, Kd-Trees and the GJK collision detection algorithm. Check out the source code for the octrees part of the project <a href="https://github.com/Melell/Space-Partitioning" class="blue-on-hover" target="_blank">here.</a>
 									</p>
                                 	<p>
 										<a href="https://github.com/Melell/Space-Partitioning" class="blue-on-hover icon brands fa-github" target="_blank">&nbsp;&nbsp;Link to GitHub repo</a>
@@ -94,14 +93,7 @@
 									<br><br>
 									<h2 class="major">Feature A</h2>
 									<h6 style="font-weight: lighter;">Demo Video</h6>
-                                    <iframe src="https://www.youtube.com/embed/7cDI4O5SWLQ?autoplay=1&mute=1&rel=0&loop=1&playlist=7cDI4O5SWLQ" title="Feature A" class="trailer dynamic-vid"></iframe>
-								</div>
-
-                                <div id="feature-b">
-									<br><br>
-									<h2 class="major">Feature B</h2>
-									<h6 style="font-weight: lighter;">Demo Video</h6>
-                                    <iframe src="https://www.youtube.com/embed/giVHaJ1Xtm0?autoplay=1&mute=1&rel=0&loop=1&playlist=giVHaJ1Xtm0" title="Feature B" class="trailer dynamic-vid"></iframe>
+									<a href="images/main-page/SpacePartitioning.jpg" class="image clickable-img"><img src="images/main-page/SpacePartitioning.jpg" alt="Project-Screenshot" style="width:50%;" /></a>
 								</div>
 
 							</div>
