Update about me description + other small fixes

--- a/Entails.html
+++ b/Entails.html
@@ -225,15 +225,15 @@
 							</form>
 							<ul class="contact">
 								<li class="contact-item">
-									<img class="footer-icon" src="images/House.png" alt="Home Icon"/>
+									<img class="footer-icon" src="images/logos/House.png" alt="Home Icon"/>
 									<p class="footer-icon-text">San Sebastian, Spain</p>
 								</li>
 								<li class="contact-item">
-									<img class="footer-icon" src="images/Phone.png" alt=""/>
+									<img class="footer-icon" src="images/logos/Phone.png" alt=""/>
 									<p class="footer-icon-text">+34 616534962</p>
 								</li>
 								<li class="contact-item">
-									<img class="footer-icon" src="images/Email.png" alt="Email Icon"/>
+									<img class="footer-icon" src="images/logos/Email.png" alt="Email Icon"/>
 									<p class="footer-icon-text"><b>m.echeverriamajadas@gmail.com</b></p>
 								</li>
 								<li class="contact-item">
