--- a/Seavilizations.html
+++ b/Seavilizations.html
@@ -49,7 +49,7 @@
 						<div class="inner">
 							<div class="logo"></div>
 							<h2>Seavilizations</h2>
-							<p>Core Engine and Gameplay Programming&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;3D Modelling Assistance</p>
+							<p>Core Engine and Gameplay Programming&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;3D Modelling</p>
 						</div>
 					</section>
 
