--- a/ShadowRacer.html
+++ b/ShadowRacer.html
@@ -49,7 +49,7 @@
 						<div class="inner">
 							<div class="logo"></div>
 							<h2>Shadow Racer</h2>
-							<p>Gameplay programming&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Graphics/VFX</p>
+							<p>Gameplay programming&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Lighting/VFX</p>
 						</div>
 					</section>
 
