Finish Seavilizations page. Change tabs to spaces + other smaller changes

--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@
                                             &nbsp;&nbsp;8 months of development<br>
                                             <span class="text icon solid fa-user-plus"></span>
                                             Team of 6 programmers<br>
-                                            <span class="text icon solid fa-gamepad"></span>
-                                            <a href="https://store.steampowered.com/app/1981300/Shadow_Racer/" target="_blank">Published on Steam</a>
+                                            <span class="icon brands fa-steam"></span>
+                                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://store.steampowered.com/app/1981300/Shadow_Racer/" target="_blank">Published on Steam</a><br>
+                                            <span class="header icon solid fa-award"></span>
+                                            &nbsp;&nbsp;&nbsp;Best Basque videogame finalist at BIG (formerly Fun & Serious)
                                         </p>
                                         <a href="ShadowRacer.html" class="special">Learn more</a>
                                     </div>
