Update ant colony simulation page to include link to github repo

--- a/AntColonySimulation.html
+++ b/AntColonySimulation.html
@@ -79,7 +79,7 @@
                                         AI pair research project implemented as part of a subject where I learned other AI techniques such as state machines, behavior trees, steering behaviors, A* pathfinding, or terrain analysis. For more information on how the project was implemented, check out the research paper we wrote <a href="docs/ant-colony-sim/RESEARCH_PAPER.pdf" class="blue-on-hover" target="_blank">here.</a>
                                     </p>
                                     <p>
-                                        <a href="#" class="blue-on-hover icon brands fa-github" target="_blank">&nbsp;&nbsp;Link to GitHub repo</a>
+                                        <a href="https://github.com/Melell/Ant-Colony-Simulation" class="blue-on-hover icon brands fa-github" target="_blank">&nbsp;&nbsp;Link to GitHub repo</a>
                                     </p>
 
                                     <ul class="game-info-list">
