Add extra vfx that I created

--- a/ShadowRacer.html
+++ b/ShadowRacer.html
@@ -221,6 +221,7 @@
                                                 <li>Smoke Particles</li>
                                                 <li>Car Explosion</li>
                                                 <li>Lightflash Recovery Effect</li>
+                                                <li>Darkness shields</li>
                                             </ul>
                                         </p>
                                     </div>
