Add Shadow Racer vfx video

--- a/ShadowRacer.html
+++ b/ShadowRacer.html
@@ -212,7 +212,6 @@
                                     <br>
                                     <div id="vfx" class="box my-box">
                                         <h3 class="my-work-separator">VFX</h3>
-                                        <p><span class="image right"><img src="images/placeholder/pic02.jpg" alt="" /></span>
                                             Created a small set of vfx using Unreal's material editor and Niagara system:
                                             <ul>
                                                 <li>Car Turbo</li>
@@ -223,7 +222,11 @@
                                                 <li>Lightflash Recovery Effect</li>
                                                 <li>Darkness shields</li>
                                             </ul>
-                                        </p>
+                                            <div class="box alt">
+                                                <div class="row gtr-uniform">
+                                                    <div class="col-6"><span class="image fit"><iframe src="https://www.youtube.com/embed/wotQM6_Peco?si=Gk7xG6w62bfvNCaY" title="Vfx Reel"></iframe></span></div>
+                                                </div>
+                                            </div>
                                     </div>
                                 </div>
 
