Add screenshots to Entails page

--- a/Entails.html
+++ b/Entails.html
@@ -61,11 +61,6 @@
 
                             <div class="inner">
 
-                                <div id="disclaimer">
-                                    <h2 class="major">Work In Progress</h2>
-                                    <p>This page is currently being worked on. There are some screenshots missing that will be added soon.</p>
-                                </div>
-
                                 <div id="shortcuts">
                                     <br><br>
                                     <h2 class="major">Shortcuts</h2>
@@ -100,6 +95,9 @@
                                     <div class="box alt">
                                         <div class="row gtr-uniform">
                                             <div class="col-12"><span class="image fit"><iframe src="https://www.youtube.com/embed/lKqRAVqub4I?autoplay=1&mute=1&start=17&rel=0&loop=1&playlist=lKqRAVqub4I" title="Entails Release Trailer" class="trailer dynamic-vid"></iframe></span></div>
+                                            <div class="col-4"><a class="blue-on-hover" href="images/screenshots/entails/Screenshot01.jpg"><span class="image fit clickable-img"><img src="images/screenshots/entails/Screenshot01.jpg" alt="Screenshot-1" /></span></a></div>
+                                            <div class="col-4"><a class="blue-on-hover" href="images/screenshots/entails/Screenshot02.jpg"><span class="image fit clickable-img"><img src="images/screenshots/entails/Screenshot02.jpg" alt="Screenshot-2" /></span></a></div>
+                                            <div class="col-4"><a class="blue-on-hover" href="images/screenshots/entails/Screenshot03.jpg"><span class="image fit clickable-img"><img src="images/screenshots/entails/Screenshot03.jpg" alt="Screenshot-3" /></span></a></div>
                                         </div>
                                     </div>
                                 </div>
@@ -124,7 +122,6 @@
                                     </div>
                                     <div id="tools" class="box my-box">
                                         <h3 class="my-work-separator">Tools</h3>
-                                            <span class="image right"><img src="images/placeholder/pic02.jpg" alt="" /></span>
                                             <p>
                                                 Streamlined production with tools such as:
                                             </p>
