--- a/thankyou.html
+++ b/thankyou.html
@@ -45,7 +45,7 @@
                 <div class="inner">
                     <div class="logo"><!--<span class="icon fa-gem"></span> --></div>
                     <h2>Miguel Echeverria</h2>
-                    <p>C++ Generalist Programmer</p>
+                    <p>C++ Gameplay Engineer</p>
                 </div>
             </section>
 
