--- a/NetworkedAsteroidsGame.html
+++ b/NetworkedAsteroidsGame.html
@@ -130,11 +130,7 @@
                             <ul class="contact">
                                 <li class="contact-item">
                                     <img class="footer-icon" src="images/logos/House.png" alt="Home Icon"/>
-                                    <p class="footer-icon-text">San Sebastian, Spain</p>
-                                </li>
-                                <li class="contact-item">
-                                    <img class="footer-icon" src="images/logos/Phone.png" alt=""/>
-                                    <p class="footer-icon-text">+34 616534962</p>
+                                    <p class="footer-icon-text">Royal Leamington Spa, UK</p>
                                 </li>
                                 <li class="contact-item">
                                     <img class="footer-icon" src="images/logos/Email.png" alt="Email Icon"/>
