Add screenshots to seavilizations and change screenshots of shadow racer

--- a/Seavilizations.html
+++ b/Seavilizations.html
@@ -31,7 +31,7 @@
                                 <a href="#shortcuts" class="blue-on-hover">About</a>
                             </div>
                             <div class="header-nav-element">
-                                <a href="#game-screenshots" class="blue-on-hover">Trailer</a>
+                                <a href="#game-screenshots" class="blue-on-hover">Screenshots</a>
                             </div>
                             <div class="header-nav-element">
                                 <a href="#my-contributions" class="blue-on-hover">My Work</a>
@@ -66,7 +66,7 @@
                                     <h2 class="major">Shortcuts</h2>
                                     <ul class="actions small">
                                         <li><a href="#shortcuts" class="button small blue-on-hover icon solid fa-link">About</a></li>
-                                        <li><a href="#game-screenshots" class="button small blue-on-hover icon solid fa-link">Trailer</a></li>
+                                        <li><a href="#game-screenshots" class="button small blue-on-hover icon solid fa-link">Screenshots</a></li>
                                         <li><a href="#my-contributions" class="button small blue-on-hover icon solid fa-link">My Work</a></li>
                                     </ul>
                                 </div>
@@ -90,11 +90,14 @@
 
                                 <div id="game-screenshots">
                                     <br><br>
-                                    <h2 class="major">Trailer</h2>
+                                    <h2 class="major">Screenshots</h2>
                                     <h6 style="font-weight: lighter;">Release Trailer</h6>
                                     <div class="box alt">
                                         <div class="row gtr-uniform">
                                             <div class="col-12"><span class="image fit"><iframe src="https://www.youtube.com/embed/F10GEwkIaQs?autoplay=1&mute=1&start=5&rel=0&loop=1&playlist=F10GEwkIaQs" title="Seavilizations Release Trailer" class="trailer dynamic-vid"></iframe></span></div>
+                                            <div class="col-4"><a class="blue-on-hover" href="images/screenshots/seavilizations/Screenshot01.jpg"><span class="image fit clickable-img"><img src="images/screenshots/seavilizations/Screenshot01.jpg" alt="Screenshot-2" /></span></a></div>
+                                            <div class="col-4"><a class="blue-on-hover" href="images/screenshots/seavilizations/Screenshot02.jpg"><span class="image fit clickable-img"><img src="images/screenshots/seavilizations/Screenshot02.jpg" alt="Screenshot-3" /></span></a></div>
+                                            <div class="col-4"><a class="blue-on-hover" href="images/screenshots/seavilizations/Screenshot03.jpg"><span class="image fit clickable-img"><img src="images/screenshots/seavilizations/Screenshot03.jpg" alt="Screenshot-4" /></span></a></div>
                                         </div>
                                     </div>
                                 </div>
